Added test for form validation. And added messages to success or fail to add contact

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ li:nth-child(even) {
 }
 
 button {
+    float: left;
     border-radius: 7px;
     background-color: lightgrey;
     font-weight: bold;
